# hijack

./: .gitmodules  Cargo.toml  README.md  config_example.toml
hijack-lib/: Cargo.toml
hijack-lib/src/: lib.rs  macos.rs  server.rs  windows.rs
src/: cli.rs  client.rs  core.rs  main.rs  observer.rs  register.rs  server.rs  teste.rs  windows.rs
test-observer/: Cargo.toml
test-tcp/src/: main.rs
