[package]
name = "hijack-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { path = "../core-foundation-rs/core-graphics", version = "0.22.3" }
core-foundation = { path = "../core-foundation-rs/core-foundation", version = "0.9.3" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["hidusage", "libloaderapi"] }
lazy_static = "1.4.0"
widestring = "0.5.1"
